tests/compile_fail/add_assign/unknow_struct_attribute.rs
#[derive(derive_more::AddAssign)]
#[add_assign(unknown)]
struct Foo(i32);

fn main() {}
